# rceth-informer

./: .gitignore  pyproject.toml
rceth_informer/rceth_spider/: crawl.sh  scrapy.cfg
rceth_informer/rceth_spider/rceth_spider/: items.py  middlewares.py  pipelines.py  settings.py  settings_debug.py  statscollectors.py
rceth_informer/rceth_spider/rceth_spider/spiders/: reestr_lekarstvennih_sredstv.py
tests/: test_rceth_informer.py
