[tool.poetry]
name = "rceth-informer"
version = "0.1.0"
description = ""
authors = ["Al Rempel <alex@rmpl.of.by>"]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
